Modificação da API de pesquisa por CEP, adição da API de inserção de novo local e tratamento personalizado de exceções.
